// Copyright Â© 2023 OpenIM. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package openmeeting.admin;

option go_package = "github.com/openimsdk/openmeeting-server/pkg/protocol/admin";

message userLoginReq {
  string account = 4;
  string password = 5;
}

message userLoginResp {
  string token = 2;
  string userID = 3;
}

message userRegisterReq {
  string userID = 1;
  string nickname = 2;
  string account = 3;
  string password = 4;
}

message userRegisterResp {
}

